--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,38 @@
 
     <build>
         <plugins>
+		    <plugin>
+			  <groupId>org.jacoco</groupId>
+			  <artifactId>jacoco-maven-plugin</artifactId>
+			  <version>0.8.7</version>
+			  <executions>
+				<execution>
+				  <id>prepare-agent</id>
+				  <goals>
+				    <goal>prepare-agent</goal>
+				  </goals>
+				</execution>
+				<execution>
+			      <id>report</id>
+				  <goals>
+				    <goal>report</goal>
+				  </goals>
+				  <configuration>
+				    <formats>
+					  <format>XML</format>
+					</formats>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.9.0</version>
+			</plugin>
         </plugins>
     </build>
 
@@ -38,10 +66,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-        </dependency>
+		      <groupId>org.jacoco</groupId>
+		      <artifactId>jacoco-maven-plugin</artifactId>
+		      <version>0.8.7</version>
+		      <scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
