--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>ch13-continuous</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>ch13-continuous</name>
+    <name>Airport</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
